# drf-jwt-stateless

./: .gitignore  README.md  manage.py  pyproject.toml
app/accounts/: admin.py  models.py
app/accounts/migrations/: 0001_initial.py
app/accounts/services/: user.py
app/authenticate/: serializers.py  urls.py  views.py
app/authenticate/services/: authenticate.py
app/authenticate/services/token/: manager.py  refresh.py
app/jwttest/: asgi.py  settings.py  urls.py  wsgi.py
